# CSC2222-Roofline

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  main.cpp
micro-benchmarks/: LICENSE  common.h  rw_roofline.h
